--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         .wrapper .noteContainer{
            display: flex;
            flex-direction: column;
-           max-height: 400px;
+           max-height: 500px;
            overflow-y: auto;
         }
         .wrapper .noteContainer::-webkit-scrollbar{
@@ -78,6 +78,7 @@
         .noteContainer .note{
             background-color: white;
             max-width:600px;
+            overflow-y: auto
             min-height: 150px;
             width: 90%;
             margin: 10px 0px ;
