--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         }
         .wrapper{
             width: 90%;
+            height: 90vh;
             max-width: 800px;
             background-color: transparent;
             padding: 20px 20px;
@@ -69,7 +70,7 @@
         .wrapper .noteContainer{
            display: flex;
            flex-direction: column;
-           max-height: 500px;
+           max-height: 700px;
            overflow-y: auto;
         }
         .wrapper .noteContainer::-webkit-scrollbar{
@@ -77,8 +78,8 @@
         }
         .noteContainer .note{
             background-color: white;
-            max-width:600px;
-            overflow-y: auto
+            max-width:400px;
+            overflow-y: auto;
             min-height: 150px;
             width: 90%;
             margin: 10px 0px ;
