--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
            display: flex;
            flex-direction: column;
            max-height: 80vh;
-           overflow: auto;
+           overflow-y: auto;
         }
         .wrapper .noteContainer::-webkit-scrollbar{
             display: none;
